trunk/Archive2/16/cd18df5ecb4f23/output
main.cpp: In function 'int main()':
main.cpp:9:18: error: 'numeric_li' is not a member of 'std'
               << std::numeric_li<int>::max() << '\n';
                  ^
main.cpp:9:34: error: expected primary-expression before 'int'
               << std::numeric_li<int>::max() << '\n';
                                  ^
main.cpp:9:34: error: expected ';' before 'int'
